--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,6 +1,6 @@
 // brand_color
 $brand:                                           #000000;
-$secondary:                                       #A1A1A1;
+$secondary:                                       #e7e7e7;
 $accent:                                          lighten($brand, 50%);
 
 
