--- a/app/views/custom/pages/custom_page.html.erb
+++ b/app/views/custom/pages/custom_page.html.erb
@@ -53,6 +53,8 @@
   </div>
 
   <% if @custom_page.projekt.present? && projekt_feature?(@custom_page.projekt, 'footer.show_projekt_footer') %>
+
+    <% if false # con-709 %>
     <div class="additional-content projekt-footer">
       <div class="filter-subnav">
         <div class="row">
@@ -62,6 +64,7 @@
         </div>
       </div>
     </div>
+    <% end %>
 
     <div class="tabs-content" data-tabs-content="projekt-footer-tabs">
 
