--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,6 +1,6 @@
 // brand_color
 $brand:                                           #0091C8;
-$secondary:                                       lighten($brand, 70%);
+$secondary:                                       #B6B5B4;
 $accent:                                          lighten($brand, 50%);
 $dark:                                            darken($brand, 10%);
 
