--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -20,8 +20,7 @@ body>header, .wrapper>header, .top-bar {
 
 .top-bar {
   h2.header-title {
-    line-height: 1em;
-    text-transform: uppercase;
+    line-height: 1.4;
     font-size: 28px;
     color: $dark;
     margin-bottom: 1em;
