--- a/app/assets/stylesheets/custom/shared.scss
+++ b/app/assets/stylesheets/custom/shared.scss
@@ -1,3 +1,18 @@
+// Footer
+
+.footer {
+  background: $brand;
+}
+
+footer {
+  color: $white;
+
+  a, a:active, a:focus {
+    color: $white;
+  }
+}
+
+
 // Shared tags icons
 
 .tag-list {
@@ -76,53 +91,53 @@
 
 .sidebar-filter-group {
   display: flex;
-	margin-top: 1em;
+  margin-top: 1em;
 
-	.sidebar-filter-button {
-		flex-grow: 1;
-		background: $secondary;
-		color: $brand;
-		border-radius: 3px;
+  .sidebar-filter-button {
+    flex-grow: 1;
+    background: $secondary;
+    color: $brand;
+    border-radius: 3px;
     margin-right: 0.5rem;
     height: 2.5rem;
     line-height: 2.5rem;
     text-align: center;
-	}
+  }
 
-	.sidebar-filter-button:hover,
-	.sidebar-filter-button:focus {
-		color: $white;
-		background: $brand;
-		text-decoration:none;
-		cursor:pointer;
-	}
+  .sidebar-filter-button:hover,
+  .sidebar-filter-button:focus {
+    color: $white;
+    background: $brand;
+    text-decoration:none;
+    cursor:pointer;
+  }
 
-	.sidebar-reset-filter-button {
+  .sidebar-reset-filter-button {
     position: relative;
     width: 20px;
     height: 20px;
     background: #ececec;
     cursor: pointer;
-		border-radius: 3px;
+    border-radius: 3px;
     height: 2.5rem;
     width: 2.5rem;
     color: #9a9a9a;
-	}
+  }
 
-	.sidebar-reset-filter-button:hover,
-	.sidebar-reset-filter-button:focus {
+  .sidebar-reset-filter-button:hover,
+  .sidebar-reset-filter-button:focus {
     background: #ddd;
   }
 
-	.sidebar-reset-filter-button:before {
-		content: "\f2ed";
-		font-weight: bold;
-		font-family: "Font Awesome 5 Free";
+  .sidebar-reset-filter-button:before {
+    content: "\f2ed";
+    font-weight: bold;
+    font-family: "Font Awesome 5 Free";
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-	}
+  }
 
 }
 
@@ -144,9 +159,9 @@
 .debate-show blockquote, .proposal-show blockquote, .poll-question-show blockquote, .budget-investment-show blockquote, .polls-show blockquote, .debate-quiz blockquote, .budget-investment-show blockquote, .draft-panels blockquote, .debate-questions blockquote, .communities-show blockquote, .topic-show blockquote, .milestone-content blockquote {
   background-color: lighten($brand, 70%);
   font-size: 1.25em;
-	padding-top: 10px;
-	padding-bottom: 8px;
-	color: $black;
+  padding-top: 10px;
+  padding-bottom: 8px;
+  color: $black;
 }
 
 
