--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,6 +1,6 @@
 // brand_color
 $brand:                                           #2b3a5d;
-$secondary:                                       lighten($brand, 70%);
+$secondary:                                       #e6f2f9;
 $accent:                                          lighten($brand, 50%);
 $dark:                                            darken($brand, 10%);
 
