--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -51,8 +51,8 @@ $welcomespan:                 $brand;
 
 
 // fonts
-$body-font-family: "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-$header-font-family: "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+$body-font-family: 'Open Sans', sans-serif !important;
+$header-font-family: 'Open Sans', sans-serif !important;
 $base-font-size:      16px;
 
 // Regular 
