--- a/app/assets/stylesheets/_consul_settings.scss
+++ b/app/assets/stylesheets/_consul_settings.scss
@@ -48,7 +48,7 @@ $budget-hover:      #7571bf;
 
 $highlight:         #e7f2fc;
 $highlight-soft:    #f3f8fd;
-$light:             #f5f7fa;
+$light:             #f5f5f5;
 $featured:          #ffdc5c;
 
 $footer-border:     #bfc1c3;
