--- a/app/assets/stylesheets/custom/projekt_selector.scss
+++ b/app/assets/stylesheets/custom/projekt_selector.scss
@@ -102,6 +102,10 @@
       flex-direction: column;
       justify-content: center;
     }
+
+    .projekt-name {
+      padding-top: 3px;
+    }
   }
 
   @media screen and (min-width: 40em) {
