--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -14,13 +14,8 @@
     <div class="row">
       <div class="column beta-badge-wrapper">
         <%= link_to '#beta' do  %>
-          <%= image_tag 'badge.png', class: 'beta-badge', size: '150x150' %>
+          <%= image_tag 'badge.png', class: 'beta-badge' %>
         <% end %>
-      </div>
-
-
-      <div class='jumbo-message column'>
-        <h1>Die Smart City MG mitgestalten</h1>
       </div>
     </div>
   </div>
