minor view changes

--- a/app/components/debates/new_component.html.erb
+++ b/app/components/debates/new_component.html.erb
@@ -1,10 +1,6 @@
 <main class="debate-new">
   <%= back_link_to debates_path, t("debates.index.section_header.title") %>
-  <%= header do %>
-    <%= link_to help_path(anchor: "debates"), title: t("shared.target_blank"), target: "_blank" do %>
-      <%= t("debates.new.more_info") %>
-    <% end %>
-  <% end %>
+  <%= header %>
 
   <aside>
     <%= helpers.render_custom_block 'debates_creation_recommendations' %>
