--- a/app/components/proposals/new_component.html.erb
+++ b/app/components/proposals/new_component.html.erb
@@ -1,6 +1,12 @@
 <main class="proposal-new">
   <%= back_link_to proposals_path, t("proposals.index.section_header.title") %>
-  <%= header %>
+  <%= header do %>
+    <% if feature?('help_page') %>
+      <%= link_to help_path(anchor: "proposals"), title: t("shared.target_blank"), target: "_blank" do %>
+        <%= t("proposals.new.more_info") %>
+      <% end %>
+    <% end %>
+  <% end %>
 
   <aside>
     <%= helpers.render_custom_block 'proposals_creation_recommendations' %>
