--- a/app/assets/stylesheets/custom/menu.scss
+++ b/app/assets/stylesheets/custom/menu.scss
@@ -16,7 +16,7 @@ body > header .locale.locale-custom,
     }
   
     .locale-switcher {
-      margin-top: 0.25rem;
+      margin-top: 0.75rem;
 
       &:focus {
         outline: 3px solid #ffbf47 !important
@@ -327,15 +327,16 @@ span.icon-no-notification {
   #navigation_bar .top-level-item > .flyout-item-name > a,
   #navigation_bar .top-level-item > .flyout-item-name,
   .subnavigation a {
-    line-height: 2rem;
+    line-height: 3rem;
+    font-weight: normal;
   }
 
   #navigation_bar .top-level-item {
-    height: 2rem;
+    height: 3rem;
   }
 
   #navigation_bar .account-admin-items li.nav-element.top-level-item > ul.nav-flyout-block {
-    top: 2rem;
+    top: 3rem;
   }
 
   // Styling flyout items
@@ -438,7 +439,7 @@ span.icon-no-notification {
         position: absolute;
         height: 100%;
         width: 22px;
-        line-height: 2rem;
+        line-height: 3rem;
       }
 
       span.icon-notification {
