--- a/app/views/custom/budgets/investments/_form.html.erb
+++ b/app/views/custom/budgets/investments/_form.html.erb
@@ -28,7 +28,7 @@
     <% end %>
 
     <div class="small-12 column">
-      <%= f.select :heading_id, ['Stadtverwaltung Zum Umsetzen', 'Selbst Umsetzung'], { include_blank: true, label: 'Umsetzung' } %>
+      <%= f.select :heading_id, ['Umsetzung durch die Stadtverwaltung', 'Ich möchte bei der Umsetzung beteiligt sein'], { include_blank: true, label: 'Umsetzung' } %>
     </div>
 
     <%= f.invisible_captcha :subtitle %>
