--- a/app/components/shared/comments_component.html.erb
+++ b/app/components/shared/comments_component.html.erb
@@ -3,7 +3,7 @@
     <%= content %>
 
     <% cache cache_key do %>
-      <%=# render Shared::CommentsFormComponent.new(record) %>
+      <%# render Shared::CommentsFormComponent.new(record) %>
 
       <%= render Shared::OrderLinksComponent.new("comments", anchor: "tab-comments") %>
 
