--- a/app/assets/stylesheets/cli/menu.scss
+++ b/app/assets/stylesheets/cli/menu.scss
@@ -35,6 +35,10 @@
     margin: 16px 26px;
     font-size: 1.5rem;
   }
+
+  .subnavigation:before {
+    background-color: inherit;
+  }
 }
 
 @media screen and (min-width: 40em) {
