--- a/app/assets/stylesheets/custom/menu.scss
+++ b/app/assets/stylesheets/custom/menu.scss
@@ -105,6 +105,7 @@ span.icon-circle {
 span.icon-notification,
 span.icon-no-notification,
 span.icon-home,
+span.icon-search,
 span.icon-admin,
 span.icon-account {
 
