--- a/app/views/custom/shared/_subnavigation.html.erb
+++ b/app/views/custom/shared/_subnavigation.html.erb
@@ -4,7 +4,7 @@
 
     <% if extended_feature?("general.elasticsearch") %>
       <div class='search-box show-for-small-only'>
-        <%= render "shared/elasticsearch_form" %>
+        <%= render partial: "shared/elasticsearch_form", locals: { placement: placement } %>
       </div>
     <% end %>
 
@@ -21,7 +21,7 @@
   <div class="account-admin-items">
     <%= render partial: 'shared/subnavigation_locale', locals: { placement: placement } if extended_feature?("general.language_switcher_in_menu") && placement == 'desktop' %>
     <% if extended_feature?("general.elasticsearch") %>
-      <%= render partial: 'shared/subnavigation_search' %>
+      <%= render partial: 'shared/subnavigation_search', locals: { placement: placement } %>
     <% end %>
     <%= render partial: "layouts/notification_item", locals: { placement: placement } %>
     <%= render partial: 'shared/subnavigation_konto', locals: { placement: placement } %>
