--- a/app/views/custom/shared/_subnavigation_search.html.erb
+++ b/app/views/custom/shared/_subnavigation_search.html.erb
@@ -1,5 +1,10 @@
-<li class="nav-element top-level-item hide-for-small-only">
-  <%= link_to '#', id: 'js-main-menu-search-button', class: 'search-items-icon' do %>
-    <%= svg_tag 'search-solid', class: "search-icon" %>
+<li class="nav-element top-level-item hide-for-small-only js-access-top-level-menu js-prevent-key-scroll"
+    <%= "aria-label='#{t('custom.links.menu.home_icon')}'" if placement == 'desktop' %>
+    <%= "tabindex=0" if placement == 'desktop' %>
+>
+  <%= link_to '#', id: 'js-main-menu-search-button', class: 'search-items-icon', tabindex: '-1', aria: { hidden: true } do %>
+     <span class="icon-search" aria-hidden="true"
+           title="<%= t("custom.layouts.header.home_link") %>">
+     </span>
   <% end %>
 </li>
