--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -24,7 +24,7 @@
 
       <div class="top-bar-title">
         <%= link_to root_path do %>
-          <%= image_tag(image_path_for("logo_header.png"), class: "", alt: t("layouts.header.logo")) %>
+          <%= image_tag(image_path_for("logo_header.jpeg"), class: "", alt: t("layouts.header.logo")) %>
         <% end %>
       </div>
     </div>
