--- a/app/views/admin/users/_users.html.erb
+++ b/app/views/admin/users/_users.html.erb
@@ -15,6 +15,7 @@
           <th scope="col"><%= t("admin.users.columns.document_number") %></th>
           <th scope="col"><%= t("admin.users.columns.roles") %></th>
           <th scope="col"><%= t("admin.users.columns.verification_level") %></th>
+          <th scope="col"><%= t("admin.users.columns.custom_newsletter") %></th>
         <% end %>
       </tr>
     </thead>
@@ -30,6 +31,7 @@
             <td><%= user.document_number %></td>
             <td><%= display_user_roles(user) %></td>
             <td><%= user.user_type %></td>
+            <td><%= user.custom_newsletter if user.custom_newsletter %></td>
           <% end %>
         </tr>
       <% end %>
