--- a/app/views/custom/users/registrations/new.html.erb
+++ b/app/views/custom/users/registrations/new.html.erb
@@ -48,6 +48,10 @@
                 ),
         class: 'checkbox-label' %>
 
+      <%= f.check_box :custom_newsletter,
+        title: t("custom.devise_views.users.registrations.new.custom_newsletter_title"),
+        label: t("custom.devise_views.users.registrations.new.custom_newsletter_label"),
+        class: 'checkbox-label' %>
 
       <div class="small-12 medium-6 small-centered margin-top">
         <%= f.submit t("devise_views.users.registrations.new.submit"), class: "button expanded" %>
