--- a/app/views/admin/users/_users.html.erb
+++ b/app/views/admin/users/_users.html.erb
@@ -15,7 +15,7 @@
           <th scope="col"><%= t("admin.users.columns.document_number") %></th>
           <th scope="col"><%= t("admin.users.columns.roles") %></th>
           <th scope="col"><%= t("admin.users.columns.verification_level") %></th>
-          <th scope="col"><%= t("admin.users.columns.custom_newsletter") %></th>
+          <th scope="col"><%= t("custom.admin.users.columns.custom_newsletter") %></th>
         <% end %>
       </tr>
     </thead>
