--- a/app/views/custom/account/show.html.erb
+++ b/app/views/custom/account/show.html.erb
@@ -64,7 +64,7 @@
               </div>
 
               <div>
-                <%= f.check_box :custom_newsletter, {label: t('custom.devise_views.users.registrations.new.custom_newsletter_label')} %>
+                <%= f.check_box :custom_newsletter, {label: t('custom.account.settings.custom_newsletter')} %>
               </div>
             <% end %>
 
