--- a/app/views/custom/pages/custom_page.html.erb
+++ b/app/views/custom/pages/custom_page.html.erb
@@ -23,7 +23,7 @@
       <% end %>
 
       <div class="row">
-        <div class="small-12 <%= 'medium-9' if @custom_page.projekt.present? %> column">
+        <div class="small-12 medium-9 column">
           <h1><%= @custom_page.title %></h1>
           <% if @custom_page.subtitle.present? %>
             <h2><%= @custom_page.subtitle %></h2>
