--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -13,8 +13,7 @@ main {
 }
 
 body>header, .wrapper>header, .top-bar {
-  background-color: inherit;
-  color: $white;
+  color: $black;
 }
 
 .header-right-group {
