--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -116,7 +116,8 @@ html.is-reveal-open body {
   #debates.debates-list.column,
   #polls.polls-list.column,
   #budgets.budgets-list.column,
-  #deficiency-reports.deficiency-reports-list.column {
+  #deficiency-reports.deficiency-reports-list.column,
+  #search-page.search-page-list.column {
     float: left;
   }
 
@@ -124,7 +125,8 @@ html.is-reveal-open body {
   #debates-sidebar.column,
   #polls-sidebar.column,
   #budgets-sidebar.column,
-  #deficiency-reports-sidebar.column {
+  #deficiency-reports-sidebar.column,
+  #search-page-sidebar.column {
     float: right;
   }
 }
