--- a/app/views/custom/users/registrations/new.html.erb
+++ b/app/views/custom/users/registrations/new.html.erb
@@ -25,6 +25,44 @@
 
       <%= f.email_field :email, placeholder: t("devise_views.users.registrations.new.email_label") %>
 
+      <div class=row>
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_first_name, placeholder: t("devise_views.users.registrations.new.dor_first_name_label") %>
+        </div>
+
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_last_name, placeholder: t("devise_views.users.registrations.new.dor_last_name_label") %>
+        </div>
+      </div>
+
+      <div class=row>
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_street_name, placeholder: t("devise_views.users.registrations.new.dor_street_name_label") %>
+        </div>
+
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_street_number, placeholder: t("devise_views.users.registrations.new.dor_street_number_label") %>
+        </div>
+      </div>
+
+      <div class=row>
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_plz, placeholder: t("devise_views.users.registrations.new.dor_plz_label") %>
+        </div>
+
+        <div class='column small-12 medium-6'>
+          <%= f.text_field :dor_city, placeholder: t("devise_views.users.registrations.new.dor_city_label") %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="user-date-of-birth sign-up column small-12">
+          <%= f.date_select :date_of_birth,
+                            prompt: true,
+                            start_year: 1900, end_year: minimum_required_age.years.ago.year %>
+        </div>
+      </div>
+
       <%= f.password_field :password, autocomplete: "off",
                            placeholder: t("devise_views.users.registrations.new.password_label") %>
 
