--- a/app/assets/stylesheets/_custom_fonts.scss
+++ b/app/assets/stylesheets/_custom_fonts.scss
@@ -1,22 +1,15 @@
-$body-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
-$header-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
+$body-font-family: 'asap' !important;
+$header-font-family: 'asap' !important;
 $base-font-size:      16px;
 
-// Regular 
 @font-face {
-  font-family: "sourcesanspro-regular-webfont";
-  src: font-url("sourcesanspro-regular-webfont.ttf") format("ttf"), font-url("custom/DMSans-Regular.ttf") format("ttf");
-  font-weight: 100;
-  font-style: normal; }
-// Bold 
+  font-family: "asap";
+  src: font-url("Asap-VariableFont_wght.ttf") format("truetype");
+  font-style: normal;
+}
+
 @font-face {
-  font-family: "sourcesanspro-bold-webfont";
-  src: font-url("sourcesanspro-bold-webfont.ttf") format("ttf"), font-url("custom/DMSans-Bold.ttf") format("ttf");
-  font-weight: 100;
-  font-style: bold; }
-// Fallback
-@font-face {
-  font-family: "PT_Serif_Web-Regular";
-  src: font-url("custom/PT_Serif_Web-Regular.ttf") format("ttf"), font-url("custom/PT_Serif_Web-Regular.ttf") format("ttf");
-  font-weight: 100;
-  font-style: normal; }
+  font-family: "asap-italic";
+  src: font-url("Asap-Italic-VariableFont_wght.ttf") format("truetype");
+  font-style: italic;
+}
