--- a/app/assets/stylesheets/cli/devise.scss
+++ b/app/assets/stylesheets/cli/devise.scss
@@ -1,24 +1,29 @@
 .custom-devise-layout {
   background-image: image-url("devise-background.jpg");
   background-position: center bottom;
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: cover;
+  color: white;
 
   .login-form {
     max-width: 500px;
     background-color: #004a83;
     opacity: .8;
-    color: white;
-    margin: auto;
+    margin: 100px auto;
+    padding: 20px 0;
 
     h2 {
       text-align: center;
       margin-top: .5rem;
       margin-bottom: 1.5rem;
     }
+  }
 
-    label {
-      color: white;
-    }
+  a, label, span {
+    color: white;
+  }
+
+  a {
+    text-decoration: underline;
   }
 }
